--- a/frontend/analytics.html
+++ b/frontend/analytics.html
@@ -6,8 +6,18 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- added nav element -->
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="items.html">Items</a>
+    <a href="profile.html">Profile</a>
+    <a href="analytics.html">Analytics</a>
+    <a href="news.html">News</a>
+    <a href="quiz.html">Quiz</a>
+  </nav>
   <div class="container">
     <!-- Did I GPT this code???-->
+    <!-- yes -->
     <h1>📊 Analytics</h1>
     <div id="stats">
       <p>Items: <span id="itemCount">0</span></p>
