--- a/frontend/items.html
+++ b/frontend/items.html
@@ -15,6 +15,18 @@
   </nav>
   <!-- fuck I think I deleted a container, god help me-->
 
+  <input type="text" id="search" placeholder="Search items..." />
+
+  <p id="itemCount">Total items: 0</p>
+
+  <form id="itemForm">
+    <input type="text" id="name" placeholder="Item name" required />
+    <input type="text" id="description" placeholder="Item description" required />
+    <button type="submit">Add Item</button>
+  </form>
+
+  <ul id="itemList"></ul>
+
   <script src="scripts/items.js"></script>
 </body>
 </html>
