--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,8 +19,8 @@
   </nav>
   <div class="container">
     <h1>🏠 Home</h1>
-    <p>Welcome to the Multi-Page FastAPI App!</p>
-    <p>This app uses FastAPI for the backend, MongoDB for data, and HTML/CSS/JS for the frontend.</p>
+    <p>Hello World</p>
+    <p>Advait Dintakurti, Aman Jayesh, Revan Reddy, Sai Kapil, Shreyas Ramasubramanian</p>
   </div>
 </body>
 </html>
