--- a/frontend/items.html
+++ b/frontend/items.html
@@ -12,8 +12,8 @@
     <a href="profile.html">Profile</a>
     <a href="analytics.html">Analytics</a>
     <a href="news.html">News</a>
+    <a href="quiz.html">Quiz</a>
   </nav>
-  <!-- fuck I think I deleted a container, god help me-->
 
   <input type="text" id="search" placeholder="Search items..." />
 
