--- a/frontend/news.html
+++ b/frontend/news.html
@@ -15,6 +15,7 @@
     <a href="quiz.html">Quiz</a>
   </nav>
   <!-- Did I make this code buggy ??? -->
+  <!-- idk looks fine to me -->
   <div class="container">
     <h1>📰 News Feed</h1>
     <p id="articleCount">Total articles: 0</p>
